--- a/builds/msvc2013/E3Modular.vcxproj.filters
+++ b/builds/msvc2013/E3Modular.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClInclude Include="..\..\src\gui\InstrumentBrowser.h">
       <Filter>src\gui</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\gui\Widgets.h">
+      <Filter>src\gui</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\gui\AudioEditor.cpp">
